helm/ingress/ingress-client.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: default
spec:
  rules:
    - host: web.nashannaguo.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: react-app
                port:
                  number: 5173
