helm/ingress/ingress-gitlab.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: gitlab
spec:
  rules:
    - host: git.nashannaguo.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: gitlab
                port:
                  number: 6666
